# chatbot

./: README.md  chat.py  config.py  info.txt  loader.py  main.py  pyproject.toml  session.py  template.html  whatsapp.py
static/: style.css
templates/: index.html  markdown.html
